# serde-object

./: Cargo.toml
src/: assistant.rs  lib.rs  serializer.rs
