[package]
name = "serde-object"
version = "0.0.0-dev"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Universal value type covering the entire Serde data model"
publish = false
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[dependencies]
lazy_static = "1.4.0"
linkme = { version = "0.2.2", optional = true }
serde = "1.0.114"
try_match = "0.2.2"
wyz = "0.2.0"

[features]
assistant-extra = ["linkme"]